--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
           integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- prism code theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hi098123/prism-for-tistory/prism.css" />
 </head>
 <body>
 <div class="markdown-body">
-    <md-block src="../README.md">
+    <md-block src="./README.md">
         <!-- README.md 로드 실패시 보이는 문구 -->
         `README.md` was *not* found
     </md-block>
