--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
     <!-- md-block -->
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
     <script type="module" src="./docs/highlight.9.3.0.min.js"></script>
+    <link href="./docs/git.css" rel="stylesheet">
+    <link href="./docs/hightlight_railscasts.css" rel="stylesheet">
 
-    <!-- github-markdown-light 테마 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
-          integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- prism code theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hi098123/prism-for-tistory/prism.css" />
 </head>
 <body>
 <div class="markdown-body">
