흐름제어 task 문서화

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <base href="./" target="_blank">
     <link href="./docs/git.css" rel="stylesheet">
     <link href="./docs/hightlight_railscasts.css" rel="stylesheet">
 
