--- a/test/sample.html
+++ b/test/sample.html
@@ -2,24 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="./vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="./asset/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>taskml</title>
-    <script type="module" crossorigin src="./taskml/index-0.1.2.js"></script>
-    <link rel="stylesheet" href="./taskml/index-0.1.2.css">
+
+    <link rel="stylesheet" href="../dist/taskml/index-0.1.3.css">
+    <script type="module" src="../dist/taskml/index-0.1.3.js"></script>
+
 </head>
 
 <body>
 
 <script>
     const image = {
-        src: './vite.svg'
+        src: './asset/vite.svg'
     }
 </script>
 
 <!--<as-task> id 생략하면 처음 자동 실행됨-->
 <!--로그 표시: mode="dev media component"-->
-<template mode="dev media component">
+<template xmlns:task="http://www.w3.org/2000/10/XMLSchema"
+          mode="dev media component">
 
 
     <!--////////////////////////////////////////
@@ -29,6 +32,7 @@
 
     <as-task id="시작" onend="alert('종료')"
              oncancel="alert('회전 취소')" onerror="alert('에러')">
+
         <as-task sync="parallel">
             <as-task src="lotte 재생"></as-task>
             <as-task src="인사말"></as-task>
@@ -41,7 +45,7 @@
     </as-task>
 
     <as-task id="인사말">
-        <sound id="sound1" set="{src:'./sound1.mp3'}"
+        <sound id="sound1" set="{src:'./asset/sound1.mp3'}"
                run="play()" wait="ended"></sound>
         <sound target="sound1" destroy="all"></sound>
     </as-task>
@@ -109,22 +113,22 @@
         <is-group x="50" y="0" h="500" layout="" style="max-width: 80%;">
 
             <is-audio x="20" y="20"
-                      src="./sound1.mp3" controls
+                      src="./asset/sound1.mp3" controls
                       onended="$task['텍스트 이동']()"></is-audio>
 
             <is-video y="100" w="300px"
                       class="rotate"
                       task:loadstart="console.log ('video 로드됨');"
-                      src="./video.mp4" controls></is-video>
+                      src="./asset/video.mp4" controls></is-video>
 
             <is-image x="350" y="50" w="100"
                       class="rotate"
-                      onclick="console.log('click')"
+                      onclick="console.error('click')"
                       src="${image.src}"></is-image>
 
             <is-lottie id="lotte"
                        r="0" b="0" w="50%" h="50%"
-                       src="./lottie.json"
+                       src="./asset/lottie.json"
                        onload="console.log('lottie load')"
                        background="transparent" speed="1" direction="1" mode="normal"></is-lottie>
 
@@ -138,7 +142,9 @@
 </template>
 
 <!--랜더러 호출-->
+<!--id="app" 못찾으면 body에서 template 찾아 랜더링 함-->
 <div id="app"></div>
+
 </body>
 </html>
 
@@ -146,4 +152,26 @@
 서버 없는 (CORS 회피) 로컬 개발 환경
 * chrome.bat 파일 실행 (chrome 브라우저 실행됨)
 * index.html 드래그해서 열면 CORS 에러 없이 작업할 수 있음
+-->
+
+
+<!--template 태그: 페이지가 로드될 때 사용자에게 숨겨진 일부 HTML 콘텐츠를 보관하는 컨테이너로 사용됨-->
+
+<!--
+<template>
+    <is-page style class x="" y="" w="" h="">
+
+        &lt;!&ndash;Hidden 요소: 랜더링 할때 사라짐&ndash;&gt;
+        <as-task id="nextStep" task:end="...">
+            &lt;!&ndash;sequence 표현 (value: args[0])&ndash;&gt;
+        </as-task>
+
+        &lt;!&ndash;HTML DOM 요소&ndash;&gt;
+        <select onselect="$task.nextStep(this.value);">
+            <option value="1">Option 1</option>
+            <option value="2">Option 2</option>
+        </select>
+
+    </is-page>
+</template>
 -->
