테스트 파일 추가

--- a/test/args.html
+++ b/test/args.html
@@ -2,16 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="./asset/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>taskml</title>
+
+    <!--<link rel="stylesheet" href="../dist/taskml/index-0.1.3.css">
+    <script type="module" src="../dist/taskml/index-0.1.3.js"></script>-->
+
 </head>
 
 <body>
 
+<template xmlns:task="http://www.w3.org/2000/10/XMLSchema"
+          mode="dev media component"></template>
+
 <button onclick="autorun();">auto run</button>
 
-<script type="module" src="/test/args.js"></script>
+<script type="module" src="./args.js"></script>
 </body>
 </html>
 
