--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <!--<base href="./" target="_blank">-->
     <link href="./docs/git.css" rel="stylesheet">
     <link href="./docs/hightlight_railscasts.css" rel="stylesheet">
-
     <!-- md-block -->
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
-    <script type="module" src="./docs/highlight.9.3.0.min.js"></script>
+
+    <!--<script type="module" src="./docs/highlight.9.3.0.min.js"></script>-->
+    <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/highlight.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/default.min.css">
 
     <link rel="stylesheet" href="/taskml.doc/assets/css/style.css?v=54bc104b6cd78e93892a7cc16975173e63472f2a">
 </head>
@@ -23,7 +25,8 @@
         `README.md` was *not* found
     </md-block>
 
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script>hljs.highlightAll();</script>
+    <!--<script>hljs.initHighlightingOnLoad();</script>-->
 </div>
 
 </body>
