--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
     <!--https://highlightjs.org/-->
-<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 
-    <script type="module" src="./docs/highlight.9.3.0.min.js"></script>
+    <!--<script type="module" src="./docs/highlight.9.3.0.min.js"></script>
     <link href="./docs/git.css" rel="stylesheet">
-    <link href="./docs/hightlight_railscasts.css" rel="stylesheet">
+    <link href="./docs/hightlight_railscasts.css" rel="stylesheet">-->
     <style>
         md-block:not([rendered]) { display: none }
     </style>
