--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
     <link href="./docs/git.css" rel="stylesheet">
     <link href="./docs/hightlight_railscasts.css" rel="stylesheet">-->
 
-    <!-- github-markdown-light 테마 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
+    <!-- github-markdown 테마 -->
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
           integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />-->
+
+    <!--https://cdnjs.com/libraries/github-markdown-css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.5.1/github-markdown-dark.min.css"
+          integrity="sha512-MmL2FuLmm/UH05Ah4JiJwA+G7OCceZDpzGHWqsju4Espzq+9nwQJdQVMNZPd1FNK2H3qDYXdET7HNG7Qm93FEg=="
           crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
