--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 
     <!-- md-block -->
     <style>
+        body{
+            margin: 0;
+            padding: 20px;
+        }
+
         md-block:not([rendered]) { display: none }
         .markdown-body{
             /*background-color: #2e303e;*/
@@ -49,12 +54,48 @@
             /*box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);*/
         }
         .markdown-body pre code{
-            background-color: #1b1f23;
+            background-color: #2e343b;
         }
+
+        /*---------------------------------*/
+
+        .dark{
+            background-color: #1c2128;
+            color: #c9d1d9
+        }
+        .dark .markdown-body{
+            background-color: transparent;
+            color: #c9d1d9
+        }
+        .dark .markdown-body blockquote {
+            border-left: 0.2em solid #6ecd56;
+            border-right: none;
+            background-color: #2e343b;
+            color: #c9d1d9;
+            font-size: small;
+            padding: 15px;
+            border-radius: 0;
+            /*box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);*/
+        }
+        .dark .markdown-body pre{
+            background-color: transparent;
+        }
+        .dark .markdown-body h1 {
+            border-bottom: 1px solid hsla(210, 18%, 87%, 0.2);
+        }
+        .dark .markdown-body a{
+            color: #33a9dc;
+            text-decoration: none;
+        }
+        .dark .markdown-body a:hover{
+            /*border: 1px solid #ffffff33;*/
+            background-color: black;
+        }
+
     </style>
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
-<body class="container-lg px-3 my-5">
+<body class="container-lg px-3 my-5 dark">
 
 <div class="markdown-body">
     <md-block src="./doc/0.2.x/index.md">
