--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body class="container-lg px-3 my-5 dark">
 
 <div class="markdown-body">
-    <md-block src="./doc/0.2.x/index.md">
+    <md-block src="README.md">
         <!-- README.md 로드 실패시 보이는 문구 -->
         `README.md` was *not* found
     </md-block>
