--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         document.addEventListener('md-render', (event) => {
             document.querySelectorAll('pre code').forEach((el) => {
                 hljs.highlightAll();
+                alert('v');
             });
         });
     </script>
