--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             document.querySelectorAll('pre code').forEach((el) => {
                 hljs.highlightAll();
             });
-            alert('v');
         });
     </script>
 
@@ -99,7 +98,7 @@
 <body class="container-lg px-3 my-5 dark">
 
 <div class="markdown-body">
-    <md-block src="README.md">
+    <md-block src="README.md" onMdRender="alert('v');">
         <!-- README.md 로드 실패시 보이는 문구 -->
         `README.md` was *not* found
     </md-block>
