--- a/index.html
+++ b/index.html
@@ -4,114 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<base href="./" target="_blank">-->
-
-
-    <!--<script type="module" src="./docs/highlight.9.3.0.min.js"></script>
-    <link href="./docs/git.css" rel="stylesheet">
-    <link href="./docs/hightlight_railscasts.css" rel="stylesheet">-->
 
     <!-- github-markdown 테마 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.2.0/github-markdown-light.css"
           integrity="sha512-n5zPz6LZB0QV1eraRj4OOxRbsV7a12eAGfFcrJ4bBFxxAwwYDp542z5M0w24tKPEhKk2QzjjIpR5hpOjJtGGoA=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.5.1/github-markdown-dark.min.css"
-          integrity="sha512-MmL2FuLmm/UH05Ah4JiJwA+G7OCceZDpzGHWqsju4Espzq+9nwQJdQVMNZPd1FNK2H3qDYXdET7HNG7Qm93FEg=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />-->
-
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!--https://highlightjs.org/-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
           integrity="sha512-rO+olRTkcf304DQBxSWxln8JXCzTHlKnIdnMUwYvQa9/Jd4cQaNkItIUj6Z4nvW1dqK0SKXLbn9h4KwZTNtAyw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+
+    <link rel="stylesheet" href="./docs/custom.css">
+    <script type="module" src="./docs/custom.js"></script>
     <script>
-        document.addEventListener('md-render', (event) => {
-            document.querySelectorAll('pre code').forEach((el) => {
-                hljs.highlightAll();
-            });
-        });
+        (() => {
+            var url = new URL(window.location);
+            var href = url.searchParams.get('href')
+            href = href ? href.substring(0, href.lastIndexOf('/') + 1) : './';
+
+            console.log('baseURI: ', href);
+            const base = document.createElement('base');
+            base.setAttribute('href', href);
+            document.currentScript.after(base);
+        })();
     </script>
+    <!--<base href="./" target="_blank">-->
 
     <!-- md-block -->
-    <style>
-        body{
-            margin: 0;
-            padding: 20px;
-        }
-
-        md-block:not([rendered]) { display: none }
-        .markdown-body{
-            /*background-color: #2e303e;*/
-        }
-        .markdown-body blockquote {
-            border-left: 0.6em solid #6ecd56;
-            border-right: 0.6em solid #6ecd56;
-            background-color: #f6f8fa;
-            /*color: #6ecd56;*/
-            font-size: small;
-            padding: 15px;
-            border-radius: 10px;
-            /*box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);*/
-        }
-        .markdown-body pre code{
-            background-color: #2e343b;
-        }
-
-        /*---------------------------------*/
-
-        .dark{
-            background-color: #1c2128;
-            color: #c9d1d9
-        }
-        .dark .markdown-body{
-            background-color: transparent;
-            color: #c9d1d9
-        }
-        .dark .markdown-body blockquote {
-            border-left: 0.2em solid #6ecd56;
-            border-right: none;
-            background-color: #2e343b;
-            color: #c9d1d9;
-            font-size: small;
-            padding: 15px;
-            border-radius: 0;
-            /*box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);*/
-        }
-        .dark .markdown-body pre{
-            background-color: transparent;
-        }
-        .dark .markdown-body h1 {
-            border-bottom: 1px solid hsla(210, 18%, 87%, 0.2);
-        }
-        .dark .markdown-body a{
-            color: #33a9dc;
-            text-decoration: none;
-        }
-        .dark .markdown-body a:hover{
-            /*border: 1px solid #ffffff33;*/
-            background-color: black;
-        }
-
-    </style>
     <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 </head>
 <body class="container-lg px-3 my-5 dark">
 
 <div class="markdown-body">
-    <md-block src="README.md" onmd-render="alert('v');">
+    <md-block>
         <!-- README.md 로드 실패시 보이는 문구 -->
-        `README.md` was *not* found
+        File was *not* found
     </md-block>
-
 </div>
+
+<ul class="btns">
+    <li class="topButton btn-hover"></li>
+    <li class="darkButton btn-hover"></li>
+</ul>
 
 </body>
 </html>
-
-<!--
-- https://readme.so/
-- https://md-block.verou.me/
-- https://cdnjs.com/libraries/github-markdown-css
-- https://prismjs.com/
-출처: https://doggyfootstep.tistory.com/7 [iOS'DoggyFootstep:티스토리]
-->
