--- a/index.html
+++ b/index.html
@@ -17,21 +17,24 @@
     <link rel="stylesheet" href="./docs/custom.css">
     <script type="module" src="./docs/custom.js"></script>
 </head>
-<body class="container-lg px-3 my-5">
+<body class="dark">
 
 <ul class="btns nav">
     <li class="homeButton btn-hover">HOME</li>
-    <li style="flex: 1;"></li>
+    <li class="versionButton btn-hover"></li>
+    <li class="title"></li>
     <li class="prevButton btn-hover">&#129128;</li>
     <li class="nextButton btn-hover">&#129130;</li>
     <li class="darkButton btn-hover">LIGHT</li>
 </ul>
 
+<div class="markdown-body-container">
 <div class="markdown-body">
     <md-block>
         <!-- README.md 로드 실패시 보이는 문구 -->
         File was *not* found
     </md-block>
+</div>
 </div>
 
 <ul class="btns vertical">
