--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <!--https://highlightjs.org/-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script src="https://tistory1.daumcdn.net/tistory/3048153/skin/images/highlightjs-line-numbers.min.js?_version_=1658662281"></script>
+    <!--<script src="https://tistory1.daumcdn.net/tistory/3048153/skin/images/highlightjs-line-numbers.min.js?_version_=1658662281"></script>-->
+    <script src="./docs/js/highlightjs-line-numbers.min.js?_version_=1658662281"></script>
 
     <!-- md-block -->
-    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
+    <!--<script type="module" src="https://md-block.verou.me/md-block.js"></script>-->
+    <script type="module" src="./docs/js/md-block.js"></script>
     <link rel="stylesheet" href="./docs/custom.css">
     <script type="module" src="./docs/custom.js"></script>
 </head>
